--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fraction_list_fmt_align"
-description = "Formats a list of arbitrary fractional number (either string or f32/f64) so that they are correctly aligned when printed line by line."
+description = "Formats a list of arbitrary fractional numbers (either string or f32/f64) so that they are correctly aligned when printed line by line."
 version = "0.1.0"
 authors = ["Philipp Schuster <phip1611@gmail.com>"]
 edition = "2018"
